--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                 <div id="intro">
                 <div class="full-width-section" style="background-color:#fff;">
                     <div class="container">
-                        <h4><img src="images/type-1-small.png" alt="Topologies" class="align-left"/>Introduction</h4><div style="clear:both"></div>
+                        <h4><img src="images/type-1-small.png" alt="Topologies" class="align-left"/>Введение</h4><div style="clear:both"></div>
 
-                        <p>The primary goal of any DevOps setup within an organisation is to improve the delivery of value for customers and the business, not in itself to reduce costs, increase automation, or drive everything from configuration management; this means that different organisations might need different team structures in order for effective Dev and Ops collaboration to take place.</p>
+                        <p>Основная цель внедрения DevOps в организации — это улучшение доставки ценностей клиенту и бизнесу, а не уменьшение расходов, увеличение автоматизации или управление конфигурацией; это означает что разным организациям необходимы разные командные структуры для эффективного сотрудничества Dev и Ops.</p>
                     </div>
                 </div>
                 </div>
