--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://web.devopstopologies.com" />
 	<meta property="og:image" content="http://web.devopstopologies.com/images/type-1.png" />
-	<meta property="og:description" content="The primary goal of any DevOps setup within an organisation is to improve the delivery of value for customers and the business, not in itself to reduce costs, increase automation, or drive everything from configuration management; this means that different organisations might need different team structures in order for effective Dev and Ops collaboration to take place." />
+	<meta property="og:description" content="Основная цель DevOps в любой организации - улучшить качество поставки ценности клиентам и бизнесу, а не уменьшить расходы, улучшить автоматизацию или контролировать все из системы управления конфигурацией. Следовательно для эффективного взаимодействия разработчиков (Dev) и эксплуатации (Ops) в разных организациях нужны разные структуры команд." />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
@@ -74,9 +74,9 @@
                 <div id="intro">
                 <div class="full-width-section" style="background-color:#fff;">
                     <div class="container">
-                        <h4><img src="images/type-1-small.png" alt="Topologies" class="align-left"/>Introduction</h4><div style="clear:both"></div>
+                        <h4><img src="images/type-1-small.png" alt="Topologies" class="align-left"/>Вступление</h4><div style="clear:both"></div>
 
-                        <p>The primary goal of any DevOps setup within an organisation is to improve the delivery of value for customers and the business, not in itself to reduce costs, increase automation, or drive everything from configuration management; this means that different organisations might need different team structures in order for effective Dev and Ops collaboration to take place.</p>
+                        <p>Основная цель DevOps в любой организации - улучшить качество поставки ценности клиентам и бизнесу, а не уменьшить расходы, улучшить автоматизацию или внедрить систему управления конфигурацией. Следовательно для эффективного взаимодействия разработки (Dev) и эксплуатации (Ops) в разных организациях нужны разные структуры команд.</p>
                     </div>
                 </div>
                 </div>
