--- a/index.html
+++ b/index.html
@@ -83,36 +83,36 @@
 
             <div class="full-width-section dark" style="background-color:#15253d;">
         <div class="container">
-            <h2>Summary</h2>    
+            <h2>Резюме</h2>
 
             <div class="sub-heading">
-                <p>Exactly which DevOps team structure or topology will suit an organisation depends on several things:</p></div>
+                <p>Какая именно структура DevOps команды подойдет организации зависит от нескольких факторов:</p></div>
 
         <div class="row">
         <div class="col-1-4">
             <i class="custom-icon icon-businessman273">&#xe801;</i>
-            <p>The product set of the organisation: fewer products make for easier collaboration, as there will be fewer natural silos, as predicted by Conway’s Law.</p>
+            <p>Набор продуктов организации: чем меньше програмнных продуктов, тем проще взаимодействие, вследствие меньшего количества естественных барьеров описаных законом Конвея.</p>
         </div>
 
         <div class="col-1-4">
             <i class="custom-icon icon-businessman271">&#xe800;</i>
-            <p>The extent, strength, and effectiveness of technical leadership; whether Dev and Ops have a shared goal.</p>
+            <p>Распространие, качество и эффективность технического руководства; имеют ли разработка и эксплуатация общие цели.</p>
         </div>
 
         <div class="col-1-4">
             <i class="custom-icon icon-monitor145">&#xe803;</i>
-            <p>Whether an organisation has the capability or appetite to change its IT Operations department from ‘racking hardware’ and ‘configuring servers’ to real alignment with the value stream, and for operational features to be taken seriously by software teams.</p>
+            <p>Готовность и желание организации изменить отдел эксплуатации в соответствии с потоком создания ценностей, и продуктовых команд относиться серьезно к эксплуатационным особеностям.</p>
         </div>
 
         <div class="col-1-4">
             <i class="custom-icon icon-tasks3">&#xe802;</i>
-            <p>Whether the organisation has the capacity or skills to take the lead on operational concerns.</p>
+            <p>Наличие в организации способности и навыков взять инициативу в вопросах эксплуатации.</p>
         </div>
         </div>
 
             <div class="clear"></div>
 
-            <p>Of course, there are variations on the themes outlined here; the topologies and types are meant as a reference guide or heuristic for assessing which patterns might be appropriate. In reality, a combination of more than one pattern, or one pattern transforming into another, will often be the best approach.</p>
+            <p>Конечно существуют различные вариации в поднятой проблематике; структуры и паттерны приведены как примеры и справочный материал для оценки применимости тех или иных шаблонов. На практике, чаще всего лучшим решением является комбинация нескольких шаблонов или шаблон трансформирующийся в другой.</p>
         </div>
         </div>
 
