--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>DevOps Topologies</title>
+    <title>DevOps Топологии</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300,400italic,700,900' rel='stylesheet' type='text/css'>
@@ -30,7 +30,7 @@
 	<meta name="msapplication-TileImage" content="/icons/mstile-144x144.png">
 	<meta name="msapplication-config" content="/icons/browserconfig.xml">
 	<meta name="theme-color" content="#ffffff">
-	<meta property="og:title" content="DevOps Topologies" />
+	<meta property="og:title" content="DevOps Топологии" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://web.devopstopologies.com" />
 	<meta property="og:image" content="http://web.devopstopologies.com/images/type-1.png" />
@@ -91,17 +91,17 @@
         <div class="row">
         <div class="col-1-4">
             <i class="custom-icon icon-businessman273">&#xe801;</i>
-            <p>Набор продуктов организации: чем меньше програмнных продуктов, тем проще взаимодействие, вследствие меньшего количества естественных барьеров описаных законом Конвея.</p>
+            <p>Набор продуктов организации: чем меньше програмнных продуктов, тем проще взаимодействие, вследствие меньшего количества естественных барьеров описанных законом Конвея.</p>
         </div>
 
         <div class="col-1-4">
             <i class="custom-icon icon-businessman271">&#xe800;</i>
-            <p>Распространие, качество и эффективность технического руководства; имеют ли разработка и эксплуатация общие цели.</p>
+            <p>Распространие, качество и эффективность технического управления; имеют ли разработка и эксплуатация общие цели.</p>
         </div>
 
         <div class="col-1-4">
             <i class="custom-icon icon-monitor145">&#xe803;</i>
-            <p>Готовность и желание организации изменить отдел эксплуатации в соответствии с потоком создания ценностей, и продуктовых команд относиться серьезно к эксплуатационным особеностям.</p>
+            <p>Готовность и желание организации изменить отдел эксплуатации в соответствии со своим потоком создания ценностей, и готовность продуктовых команд относиться серьезно к эксплуатационным особеностям.</p>
         </div>
 
         <div class="col-1-4">
@@ -112,7 +112,7 @@
 
             <div class="clear"></div>
 
-            <p>Конечно существуют различные вариации в поднятой проблематике; структуры и паттерны приведены как примеры и справочный материал для оценки применимости тех или иных шаблонов. На практике, чаще всего лучшим решением является комбинация нескольких шаблонов или шаблон трансформирующийся в другой.</p>
+            <p>Конечно существуют различные вариации решений в поднятой проблематике; структуры и паттерны приведены как пример и справочный материал для оценки применимости тех или иных шаблонов. На практике, чаще всего лучшим решением является комбинация нескольких шаблонов или шаблон меняющийся в другой.</p>
         </div>
         </div>
 
@@ -120,11 +120,11 @@
         <div class="container">
         <div class="row">
         <div class="col-1-2">
-            <p>Так какая структура команды нужна для процветания DevOps? Очевидно, не существует серебряной пули или структуры команды которая подошла бы любой организации. Тем не менее, будет полезно описать несколько различных моделей построения команд, некоторые из них подойдут конкретной организации лучше остальных. Изучая сильные и слабые стороны данных структур команд (или топологий) можно найти такую структуру которая наилучшим образом подойдет для реализации DevOps практик в вашей организации, учитывая закон Конвея.</p>
+            <p>Так какая структура команды нужна для процветания DevOps? Очевидно, что не существует серебряной пули или структуры команды которая подошла бы любой организации. Тем не менее, будет полезно описать несколько различных моделей построения команд, некоторые из них подойдут конкретной организации лучше остальных. Изучая сильные и слабые стороны структур команд (или топологий) можно найти такую структуру которая наилучшим образом подойдет для реализации DevOps практик в вашей организации учитывая закон Конвея.</p>
         </div>
 
         <div class="col-1-2">
-            <p>Большинство DevOps топологий уже были описаны; в частности, Lawrence Sweeney из CollabNet в коментариях блога Ben Kepes описывает полезные детали структуры которую я обозначл как <a href="#anti-type-b">Антипаттерн B (Изолированная DevOps команда)</a>, <a href="#type-three">Паттерн 3 (Эксплуатация как IaaS)</a>, и <a href="#type-one">Паттерн 1 (Сотрудничество разработки и эксплуатации)</a>. У DevOpsGuys есть список из двенадцати антипаттернов DevOps, и у Jez Humble, Gene Kim, Damon Edwards (и многих других) есть подобные списки. Я добавил три дополнительных 'топологии', которые я редко встречал (<a href="#type-two">Общая эксплуатация</a>, <a href="#type-four">DevOps-as-a-Service</a> и <a href="#type-five">Временная DevOps команда</a>).</p>
+            <p>Большинство DevOps топологий уже были описаны; в частности, Lawrence Sweeney из CollabNet описывает интересные подробности в коментариях к публикации в блоге Ben Kepes о структурах которые я обозначил как <a href="#anti-type-b">Антипаттерн B (Изолированная DevOps команда)</a>, <a href="#type-three">Паттерн 3 (Эксплуатация как IaaS)</a>, и <a href="#type-one">Паттерн 1 (Сотрудничество разработки и эксплуатации)</a>. У DevOpsGuys есть список из двенадцати антипаттернов DevOps, и у Jez Humble, Gene Kim, Damon Edwards (и многих других) есть подобные списки. Я добавил три дополнительные 'топологии', которые я редко встречал (<a href="#type-two">Общая эксплуатация</a>, <a href="#type-four">DevOps-as-a-Service</a> и <a href="#type-five">Временная DevOps команда</a>).</p>
         </div>
         </div>
         </div>
@@ -591,7 +591,7 @@ we might call ‘anti-types’ (after the ubiquitous ‘anti-pattern‘).</p>
         <p>Встречали ли вы структуру команды не описанную здесь?</p>
         <p>Какой инструмент для построения диаграмм нам лучше использовать? <!--a href="http://casual-effects.com/markdeep/">Markdeep</a>? <a href="http://www.w3schools.com/svg/">SVG</a>?<--></p>
 
-        <a class="button blue" href="http://web.devopstopologies.com/#disqus_thread">Внести предложение</a>
+        <a class="button blue" href="http://web.devopstopologies.com/#disqus_thread">Обсудить</a>
         </div>
         <div class="col-1-3">
         <h4>Внеси свой вклад</h4>
