review of vikhab translation

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://web.devopstopologies.com" />
 	<meta property="og:image" content="http://web.devopstopologies.com/images/type-1.png" />
-	<meta property="og:description" content="Основная цель DevOps в любой организации - улучшить качество поставки ценности клиентам и бизнесу, а не уменьшить расходы, улучшить автоматизацию или контролировать все из системы управления конфигурацией. Следовательно для эффективного взаимодействия разработчиков (Dev) и эксплуатации (Ops) в разных организациях нужны разные структуры команд." />
+	<meta property="og:description" content="Основная цель DevOps в любой организации - улучшить качество поставки ценности клиентам и бизнесу, а не уменьшить расходы, улучшить автоматизацию или контролировать все из системы управления конфигурацией. Следовательно, для эффективного взаимодействия разработчиков (Dev) и эксплуатации (Ops) в разных организациях нужны разные структуры команд." />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
@@ -96,12 +96,12 @@
 
         <div class="col-1-4">
             <i class="custom-icon icon-businessman271">&#xe800;</i>
-            <p>Распространие, качество и эффективность технического управления; имеют ли разработка и эксплуатация общие цели.</p>
+            <p>Степень, качество и эффективность технического управления; имеют ли разработка и эксплуатация общие цели.</p>
         </div>
 
         <div class="col-1-4">
             <i class="custom-icon icon-monitor145">&#xe803;</i>
-            <p>Готовность и желание организации изменить отдел эксплуатации в соответствии со своим потоком создания ценностей, и готовность продуктовых команд относиться серьезно к эксплуатационным особеностям.</p>
+            <p>Готовность и желание организации изменить отдел эксплуатации в соответствии со своим потоком создания ценностей, и готовность продуктовых команд относиться серьезно к эксплуатационным особенностям.</p>
         </div>
 
         <div class="col-1-4">
@@ -112,7 +112,7 @@
 
             <div class="clear"></div>
 
-            <p>Конечно существуют различные вариации решений в поднятой проблематике; структуры и паттерны приведены как пример и справочный материал для оценки применимости тех или иных шаблонов. На практике, чаще всего лучшим решением является комбинация нескольких шаблонов или шаблон меняющийся в другой.</p>
+            <p>Конечно, существуют различные вариации решений в поднятой проблематике; структуры и паттерны приведены как примеры и справочный материал для оценки применимости тех или иных шаблонов. На практике, чаще всего лучшим решением является комбинация нескольких шаблонов или шаблон меняющийся в другой.</p>
         </div>
         </div>
 
@@ -120,11 +120,11 @@
         <div class="container">
         <div class="row">
         <div class="col-1-2">
-            <p>Так какая структура команды нужна для процветания DevOps? Очевидно, что не существует серебряной пули или структуры команды которая подошла бы любой организации. Тем не менее, будет полезно описать несколько различных моделей построения команд, некоторые из них подойдут конкретной организации лучше остальных. Изучая сильные и слабые стороны структур команд (или топологий) можно найти такую структуру которая наилучшим образом подойдет для реализации DevOps практик в вашей организации учитывая закон Конвея.</p>
+            <p>Так какая структура команды нужна для процветания DevOps? Очевидно, что не существует серебряной пули или структуры команды, которая подошла бы любой организации. Тем не менее, будет полезно описать несколько различных моделей построения команд, некоторые из них подойдут конкретной организации лучше остальных. Изучая сильные и слабые стороны структур команд (или топологий), можно найти такую структуру, которая наилучшим образом подойдет для реализации DevOps практик в вашей организации, учитывая закон Конвея.</p>
         </div>
 
         <div class="col-1-2">
-            <p>Большинство DevOps топологий уже были описаны; в частности, Lawrence Sweeney из CollabNet описывает интересные подробности в коментариях к публикации в блоге Ben Kepes о структурах которые я обозначил как <a href="#anti-type-b">Антипаттерн B (Изолированная DevOps команда)</a>, <a href="#type-three">Паттерн 3 (Эксплуатация как IaaS)</a>, и <a href="#type-one">Паттерн 1 (Сотрудничество разработки и эксплуатации)</a>. У DevOpsGuys есть список из двенадцати антипаттернов DevOps, и у Jez Humble, Gene Kim, Damon Edwards (и многих других) есть подобные списки. Я добавил три дополнительные 'топологии', которые я редко встречал (<a href="#type-two">Общая эксплуатация</a>, <a href="#type-four">DevOps-as-a-Service</a> и <a href="#type-five">Временная DevOps команда</a>).</p>
+            <p>Большинство DevOps топологий уже были ранее описаны. В частности, Lawrence Sweeney из CollabNet описывает интересные подробности в комментариях к публикации в блоге Ben Kepes о структурах, которые я обозначил как <a href="#anti-type-b">Антипаттерн B (Изолированная DevOps команда)</a>, <a href="#type-three">Паттерн 3 (Эксплуатация как IaaS)</a>, и <a href="#type-one">Паттерн 1 (Сотрудничество разработки и эксплуатации)</a>. У DevOpsGuys есть список из двенадцати антипаттернов DevOps, и у Jez Humble, Gene Kim, Damon Edwards (и многих других) есть подобные списки. Я добавил три дополнительные 'топологии', которые я редко встречал (<a href="#type-two">Общая эксплуатация</a>, <a href="#type-four">DevOps-as-a-Service</a> и <a href="#type-five">Временная DevOps команда</a>).</p>
         </div>
         </div>
         </div>
