translate team topologies
Signed-off-by: Andrey Aleksandrov <postgred@gmail.com>

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a href="#anti-types">Anti-Types</a>    
             </li>
             <li>
-            <a href="#team-topologies">Team Topologies</a>    
+            <a href="#team-topologies">Структуры команды</a>    
             </li>
             </ul>
             </div>
@@ -291,10 +291,10 @@ we might call ‘anti-types’ (after the ubiquitous ‘anti-pattern‘).</p>
         
         <div id="team-topologies" class="full-width-section dark" style="background:url(images/bg-lt-blue.jpg);">
         <div class="container">
-            <h2><strong>DevOps</strong> Team Topologies</h2>
+            <h2><strong>DevOps</strong> структуры команды</h2>
             
             <div class="sub-heading">
-            <p>In opposition to the anti-types, we can look at some topologies in which DevOps can be made to work.</p>
+              <p>В противовес антипаттернам мы можем посмотреть на некоторые структуры, в которых DevOps может работать</p>
             </div>
         </div>
     </div>
