--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
 
         <div class="col-1-2">
-            <p>Большинство DevOps топологий уже были ранее описаны. В частности, Lawrence Sweeney из CollabNet описывает интересные подробности в комментариях к публикации в блоге Ben Kepes о структурах, которые я обозначил как <a href="#anti-type-b">Антипаттерн B (Изолированная DevOps команда)</a>, <a href="#type-three">Паттерн 3 (Эксплуатация как IaaS)</a>, и <a href="#type-one">Паттерн 1 (Сотрудничество разработки и эксплуатации)</a>. У DevOpsGuys есть список из двенадцати антипаттернов DevOps, и у Jez Humble, Gene Kim, Damon Edwards (и многих других) есть подобные списки. Я добавил три дополнительные 'топологии', которые я редко встречал (<a href="#type-two">Общая эксплуатация</a>, <a href="#type-four">DevOps-as-a-Service</a> и <a href="#type-five">Временная DevOps команда</a>).</p>
+            <p>Большинство DevOps топологий уже были ранее описаны. В частности, Lawrence Sweeney из CollabNet описывает интересные подробности в комментариях к публикации в блоге Ben Kepes о структурах, которые я обозначил как <a href="#anti-type-b">Антипаттерн B (Отдельная DevOps команда)</a>, <a href="#type-three">Паттерн 3 (Эксплуатация как IaaS)</a>, и <a href="#type-one">Паттерн 1 (Сотрудничество команд разработки и эксплуатации)</a>. У DevOpsGuys есть список из двенадцати антипаттернов DevOps, и у Jez Humble, Gene Kim, Damon Edwards (и многих других) есть подобные списки. Я добавил три дополнительные 'топологии', которые я редко встречал (<a href="#type-two">Полностью распределенные функции эксплуатации</a>, <a href="#type-four">DevOps как внешний сервис</a> и <a href="#type-five">Временная DevOps команда</a>).</p>
         </div>
         </div>
         </div>
@@ -146,13 +146,13 @@
         <div class="container">
         <ul>
         <!--li><strong>Anti-Type</strong></li-->
-        <li><a href="#anti-type-a">A: Dev vs Ops</a></li>
-        <li><a href="#anti-type-b">B: DevOps Silo</a></li>
-        <li><a href="#anti-type-c">C: No Ops Needed</a></li>
-        <li><a href="#anti-type-d">D: Tools Team</a></li>
-        <li><a href="#anti-type-e">E: SysAdmin</a></li>
-        <li><a href="#anti-type-f">F: Embedded Ops</a></li>
-        <li><a href="#anti-type-g">G: Dev vs DBA</a></li>
+        <li><a href="#anti-type-a">A: Изоляция Разработки и Эксплуатации</a></li>
+        <li><a href="#anti-type-b">B: Отдельная DevOps команда</a></li>
+        <li><a href="#anti-type-c">C: Разработке не нужна Эксплуатация</a></li>
+        <li><a href="#anti-type-d">D: DevOps как разработка инструментария</a></li>
+        <li><a href="#anti-type-e">E: Переименованные сисадмины</a></li>
+        <li><a href="#anti-type-f">F: Эксплуатация встроенная в команду разработки</a></li>
+        <li><a href="#anti-type-g">G: Изоляция разработчиков и DBA</a></li>
         </ul>
         </div>
     </div>
@@ -185,7 +185,7 @@
 
             <p>Отдельная DevOps команда (Антипаттерн B) - типичный результат решения менеджера или исполнительного директора о том, что "нам нужно немного этого самого DevOps-а", и создания ’DevOps-команды’ (возможно полностью состоящей из так называемых ’DevOps-ов’). Члены DevOps-команды быстро изолируются, держась подальше от Разработки и Эксплуатации и закрывая в собственный уголок навыки и инструментарий от ’невежд из Разработки’ и ’динозавров из Эксплуатации’.</p>
 
-            <p>Отдельная DevOps-команда действительно имеет смысл в случае, когда она создается временно, скажем, на срок не более 12 или 18 месяцев, с явной целью сблизить Разработку и Эксплуатацию и с явным распоряжением распустить DevOps-команду по истечении этого времени. Это образует то, что я называю <a href="#type-five">5 Типом DevOps Структуры</a>.</p>
+            <p>Отдельная DevOps-команда действительно имеет смысл в случае, когда она создается временно, скажем, на срок не более 12 или 18 месяцев, с явной целью сблизить Разработку и Эксплуатацию и с явным распоряжением распустить DevOps-команду по истечении этого времени. Это образует то, что я называю <a href="#type-five">5-м Типом (Временная DevOps команда)</a>.</p>
         </div>
 
         <div class="col-1-2 hidden-desktop">
@@ -200,7 +200,7 @@
 
             <p>Эта структура - порождение сочетания наивности и высокомерия разработчиков и менеджеров от разработки, особенно в начале работы над новым проектом или системой. Решив, что Эксплуатация - это пережиток прошлого ("Теперь у нас есть Облака, ведь так?"), разработчики сильно недооценивают сложность и важность эксплуатационной деятельности и навыков, и верят, что они смогут обойтись без них или просто обретут их в свободное время.</p>
 
-            <p>Подобную DevOps структуру Антипаттерна C, вероятно, в конечном итоге, нужно будет преобразовать или в структуру <a href="#type-three">3-го Типа (Ops as IaaS)</a> или в структуру <a href="#type-four">4-го Типа (DevOps-as-a-Service)</a>, когда их продукт станет более сложным и эксплуатационная деятельность начнет поглощать время для разработки. Только если такие команды понимают, что Эксплуатация такая же важная и значительная область как и Разработка, они способны избежать сильной боли и ненужных (и довольно типичных) эксплуатационных ошибок.</p>
+            <p>Подобную DevOps структуру Антипаттерна C, вероятно, в конечном итоге, нужно будет преобразовать или в структуру <a href="#type-three">3-го Типа (Эксплуатация как 'Инфрраструктура-как-сервис')</a> или в структуру <a href="#type-four">4-го Типа (DevOps как внешний сервис)</a>, когда их продукт станет более сложным и эксплуатационная деятельность начнет поглощать время для разработки. Только если такие команды понимают, что Эксплуатация такая же важная и значительная область как и Разработка, они способны избежать сильной боли и ненужных (и довольно типичных) эксплуатационных ошибок.</p>
         </div>
 
         <div class="col-1-2">
@@ -248,7 +248,7 @@
         <div class="col-1-2 hidden-mobile">
             <div class="spacer"></div>
             <img src="images/anti-type-f.png" alt="Anti-Type F"/>
-            <div class="thanks-link">Thanks to Matt Franz
+            <div class="thanks-link">Спасибо Matt Franz
 <a target="_blank" href="http://twitter.com/seclectech">(@seclectech)</a></div>
         </div>
 
@@ -263,7 +263,7 @@
         <div class="col-1-2 hidden-desktop">
             <div class="spacer"></div>
             <img src="images/anti-type-f.png" alt="Anti-Type F"/>
-            <div class="thanks-link">Thanks to Matt Franz
+            <div class="thanks-link">Спасибо Matt Franz
 <a target="_blank" href="http://twitter.com/seclectech">(@seclectech)</a></div>
         </div>
         </div>
@@ -301,15 +301,15 @@
         <div class="container">
         <ul>
         <!--li><strong>Topologies</strong></li-->
-        <li><a href="#type-one">1: Dev+Ops</a></li>
-        <li><a href="#type-two">2: Shared Ops</a></li>
-        <li><a href="#type-three">3: Ops as IaaS</a></li>
-        <li><a href="#type-four">4: DevOps-as-a-Service</a></li>
-        <li><a href="#type-five">5: Временная DevOps-команда</a></li>
-        <li><a href="#type-six">6: DevOps евангелисты</a></li>
-        <li><a href="#type-seven">7: SRE Команда</a></li>
-        <li><a href="#type-eight">8: Container-Driven</a></li>
-        <li><a href="#type-nine">9: DB Capability</a></li>
+        <li><a href="#type-one">1: Сотрудничество команд разработки и эксплуатации</a></li>
+        <li><a href="#type-two">2: Полностью распределенные функции эксплуатации</a></li>
+        <li><a href="#type-three">3: Эксплуатация как 'Инфрраструктура-как-сервис' (IaaS)</a></li>
+        <li><a href="#type-four">4: DevOps как внешний сервис</a></li>
+        <li><a href="#type-five">5: Временная DevOps команда</a></li>
+        <li><a href="#type-six">6: Команда DevOps евангелистов</a></li>
+        <li><a href="#type-seven">7: SRE Команда (Модель Google)</a></li>
+        <li><a href="#type-eight">8: Взаимодействие через контейнеры</a></li>
+        <li><a href="#type-nine">9: Взаимодействие Разработки и DBA</a></li>
         </ul>
         </div>
     </div>
@@ -355,7 +355,7 @@
             <h5><strong>Тип 2:</strong> Полностью распределенные функции эксплуатации</h5>
             <p>Там, где команда эксплуатации была интегрирована в группу разработки продуктов, мы видим топологию Типа 2. Между задачами разработки и эксплуатации мало разделения и все сотрудники сфокусированы на общей цели.  Это спорная форма <a href="#type-one">Тип 1 (Сотрудничество команд разработки и эксплуатации)</a>, но она имеет свои возможности.</p>
 
-            <p>Такие организации, как Netflix и Facebook, практически разрабатывающих один веб-продукт, реализовали эту топологию Типа 2, но я думаю, что это, вероятно, не очень удобно за пределами узкого целевого продукта, поскольку бюджетные ограничения и контекстное переключение обычно присутствуют в организации с несколькими цифровыми продуктами, что заставит их разделить разработку и эксплуатацию, скажем, обратно к <a href="#type-one">модели Типа 1</a>. Эта топология также может быть названа «NoOps», поскольку нет отдельной или видимой команды эксплуатации (хотя Netflix NoOps также может быть <a href="#type-three">Типом 3 (Эксплуатация как IaaS)</a>).</p>
+            <p>Такие организации, как Netflix и Facebook, практически разрабатывающих один веб-продукт, реализовали эту топологию Типа 2, но я думаю, что это, вероятно, не очень удобно за пределами узкого целевого продукта, поскольку бюджетные ограничения и контекстное переключение обычно присутствуют в организации с несколькими цифровыми продуктами, что заставит их разделить разработку и эксплуатацию, скажем, обратно к <a href="#type-one">модели Типа 1</a>. Эта топология также может быть названа «NoOps», поскольку нет отдельной или видимой команды эксплуатации (хотя Netflix NoOps также может быть <a href="#type-three">Типом 3 (Эксплуатация как 'Инфрраструктура-как-сервис')</a>).</p>
         </div>
 
         <div class="col-1-2 hidden-desktop">
@@ -373,7 +373,7 @@
 
         <div id="type-three" class="row">
         <div class="col-1-2">
-            <h5><strong>Тип 3:</strong> Эксплуатация как Инфрраструктура-как-сервис (Infrastructure-as-a-Service, IaaS)</h5>
+            <h5><strong>Тип 3:</strong> Эксплуатация как 'Инфрраструктура-как-сервис' (IaaS)</h5>
             <p>Для организаций с довольно традиционным отделом ИТ эксплуатации, который не может или не будет быстро (достаточно быстро) изменяться, и для организаций, которые запускают все свои приложения в публичном облаке (Amazon EC2, Rackspace, Azure и т.д.), вероятно поможет рассматривать эксплуатацию как команду, которая просто обеспечивает гибкую инфраструктуру, на которой развертываются и запускаются приложения. Внутренняя команда эксплуатации, таким образом, прямо эквивалентна Amazon EC2 или Инфраструктура-как-сервис (Infrastructure-as-a-Service).</p>
 
             <p>Команда (возможно, виртуальная команда) разработки затем выступает в качестве источника знаний об эксплуатационных функциях, метриках, мониторинге, настройке серверов и т.д., и, вероятно, выполняет большую часть взаимодействия с командой IaaS. Тем не менее, эта команда по-прежнему является командой разработчиков, следует стандартным практикам, таким как TDD, CI, итеративное развитие, коучинг и т.д.</p>
@@ -412,7 +412,7 @@
 
             <p>Некоторые организации, в особенности небольшие, могут не располагать финансами, опытом или персоналом, чтобы взять на себя инициативу в аспектах эксплуатации продукта, который они производят. Команда разработки может обратиться к поставщику услуг вроде Rackspace с просьбой помочь им построить тестовые окружения и автоматизировать их инфраструктуру и мониторинг, а также консультировать по поводу эксплуатационных особенностей, которые необходимо реализовать в ходе цикла разработки продукта.</p>
 
-            <p>То, что можно назвать DevOps-as-a-Service, может быть успешным и прагматичным выбором для маленьких организаций или команд, чтобы научиться автоматизации, мониторингу и управлению конфигурацией, и затем, возможно, перейти к модели <a href="#type-three">3-го Типа (Ops as IaaS)</a> или даже <a href="#type-one">1-го Типа (Dev and Ops Collaboration)</a> когда они расширятся наймут больше персонала с фокусом на эксплуатацию.</p>
+            <p>То, что можно назвать DevOps-as-a-Service, может быть успешным и прагматичным выбором для маленьких организаций или команд, чтобы научиться автоматизации, мониторингу и управлению конфигурацией, и затем, возможно, перейти к модели <a href="#type-three">3-го Типа (Эксплуатация как 'Инфрраструктура-как-сервис')</a> или даже <a href="#type-one">1-го Типа (Сотрудничество команд разработки и эксплуатации)</a> когда они расширятся наймут больше персонала с фокусом на эксплуатацию.</p>
         </div>
 
         <div class="col-1-2 hidden-desktop">
@@ -432,7 +432,7 @@
         <div class="col-1-2">
             <h5><strong>5 Тип:</strong> DevOps-команда с ограниченным сроком действия</h5>
 
-            <p>DevOps-команда с ограниченным сроком действия (5 Тип) в значительной степени похож на <a href="#anti-type-b">Антипаттерн B (отдельная DevOps-команда)</a>, но цель и продолжительность её существования совершенно другие. У этой временной команды есть задача сблизить Разработку и Эксплуатацию, в идеале к модели <a href="#type-one">1 Типа (Dev and Ops Collaboration)</a> или <a href="#type-two">2 Типа (Fully Shared Ops Reponsibilities)</a>, в конечном итоге став ненужной.</p>
+            <p>DevOps-команда с ограниченным сроком действия (5 Тип) в значительной степени похож на <a href="#anti-type-b">Антипаттерн B (Отдельная DevOps-команда)</a>, но цель и продолжительность её существования совершенно другие. У этой временной команды есть задача сблизить Разработку и Эксплуатацию, в идеале к модели <a href="#type-one">1 Типа (Сотрудничество команд разработки и эксплуатации)</a> или <a href="#type-two">2 Типа (Полностью распределенные функции эксплуатации)</a>, в конечном итоге став ненужной.</p>
 
             <p>Члены временной команды будут ‘переводчиками’ между Разработкой и Эксплуатацией, предлагая безумные идеи в виде stand-up-ов и Канбан'а для команды эксплуатации, и думая о неприличных деталях наподобие балансировщиков нагрузки, управления сетевыми интерфейсами и SSL-offloading'ом для команды Разработки. Если достаточно людей начинает видеть значительное сближение Разработки и Эксплуатации, то у временной команды есть реальный шанс достичь своей цели. Принципиально, что долгосрочная ответственность за развертывание и диагностику продуктового окружения не должна быть возложена на временную команду, иначе это становится похожим на <a href="#anti-type-b">Отдельную DevOps команду (Антипаттерн B).</a></p>
         </div>
@@ -454,7 +454,7 @@
         <div class="col-1-2 hidden-mobile">
             <div class="spacer"></div>
             <img src="images/type-6.png" alt="Type 6"/>
-            <div class="thanks-link">Thanks to Eric Minick
+            <div class="thanks-link">Спасибо Eric Minick
 <a target="_blank" href="https://twitter.com/ericminick">(@EricMinick)</a></div>
             <div class="suitability medium">
                 <i class="fa fa-check-circle"></i>
@@ -466,20 +466,16 @@
         </div>
 
         <div class="col-1-2">
-            <h5><strong>Type 6:</strong> DevOps Evangelists Team</h5>
+            <h5><strong>Type 6:</strong> Команда DevOps евангелистов</h5>
 
             <p>Внутри организаций, в которых существует огромный разрыв между Разработкой и Эксплуатацией (или склонность к образованию разрыва), может быть эффективно иметь 'вспомогательную' DevOps-команду, которая бы призывала Разработку и Эксплуатацию к диалогу. Это версия <a href="#type-five">5-го Типа (DevOps-команда с ограниченным сроком действия)</a>, но где DevOps-команда существует на постоянной основе с компетенцией содействия сотрудничеству и взаимодействию между Разработкой и Эксплуатацией. Членов этой команды иногда называют 'DevOps евангелистами', поскольку они помогают распространить понимание DevOps практик.</p>
 
-            <div class="tweet"><p><a href="https://twitter.com/ericminick/status/517335119330172930">The goal for a "DevOps Team" should be to put itself out of business by enabling the rest of the org.</a></p>
-            <div class="tweet-author"><i class="fa fa-twitter"></i><a href="https://twitter.com/ericminick">EricMinick</a></div>
-                <div class="clear"></div>
-            </div>
         </div>
 
         <div class="col-1-2 hidden-desktop">
             <div class="spacer"></div>
             <img src="images/type-6.png" alt="Type 6"/>
-            <div class="thanks-link">Thanks to Eric Minick
+            <div class="thanks-link">Спасибо Eric Minick
 <a target="_blank" href="https://twitter.com/ericminick">(@EricMinick)</a></div>
             <div class="suitability medium">
                 <i class="fa fa-check-circle"></i>
@@ -503,7 +499,7 @@
         <div class="col-1-2">
             <div class="spacer"></div>
             <img src="images/type-7.png" alt="Type 7"/>
-                        <div class="thanks-link">Thanks to Kevin Hinde
+                        <div class="thanks-link">Спасибо Kevin Hinde
 <a target="_blank" href="https://twitter.com/kwdhinde">(@kwdhinde)</a></div>
             <div class="suitability high">
                 <i class="fa fa-check-circle"></i>
@@ -519,7 +515,7 @@
         <div class="col-1-2 hidden-mobile">
             <div class="spacer"></div>
             <img src="images/type-8.png" alt="Type 8"/>
-            <div class="thanks-link">Thanks to J Buchanan
+            <div class="thanks-link">Спасибо J Buchanan
                 <a target="_blank" href="https://twitter.com/jascbu">(@jascbu)</a>
             </div>
             <div class="suitability medium">
@@ -540,7 +536,7 @@
         <div class="col-1-2 hidden-desktop">
             <div class="spacer"></div>
             <img src="images/type-8.png" alt="Type 8"/>
-            <div class="thanks-link">Thanks to J Buchanan<a target="_blank" href="https://twitter.com/jascbu">(@jascbu)</a>
+            <div class="thanks-link">Спасибо J Buchanan<a target="_blank" href="https://twitter.com/jascbu">(@jascbu)</a>
             </div>
             <div class="suitability medium">
                 <i class="fa fa-check-circle"></i>
@@ -594,7 +590,7 @@
 
         <p>Мы всегда рады дополнениям и предложениям от любого заинтересованного в структурах команд. Код этого сайта доступен на Github - присылай свой pull request!</p>
 
-        <a class="button blue" href="https://github.com/SkeltonThatcher/devopstopologies">Поучаствовать на GitHub</a>
+        <a class="button blue" href="https://github.com/express42/devopstopologies-ru/">Поучаствовать на GitHub</a>
         </div>
         <div class="col-1-3">
         <h4>Познакомся с авторами</h4>
@@ -606,6 +602,7 @@
             <p>Manuel Pais редактировал и помог улучшить как сам сайт, так и описания и определения паттернов.</p>
 
             <p><a href="https://skeltonthatcher.com/meet-the-team/#matthew">Matthew</a> и <a href="https://skeltonthatcher.com/meet-the-team/#manuel">Manuel</a> занимают должность People-Friendly Technologist в <a href="http://skeltonthatcher.com/">Skelton Thatcher Consulting</a>.</p>
+            <p>Перевод <a href="https://express42.com">Express42</a></p>
 
         </div>
     </div>
