Fix Google Analytics and Disqus

--- a/index.html
+++ b/index.html
@@ -678,14 +678,14 @@
         **/
 
         var disqus_config = function () {
-        this.page.url = 'http://web.devopstopologies.com/'; // canonical URL variable
-        this.page.identifier = 'W9sb2d5CBdX'; // unique identifier variable
+        this.page.url = 'http://devopstopologies.ru/'; // canonical URL variable
+        this.page.identifier = 'devopstopologies-ru'; // unique identifier variable
         };
 
         (function() { // DON'T EDIT BELOW THIS LINE
             var d = document, s = d.createElement('script');
 
-            s.src = '//devopstopologies.disqus.com/embed.js';
+            s.src = '//devopstopologies-ru.disqus.com/embed.js';
 
             s.setAttribute('data-timestamp', +new Date());
             (d.head || d.body).appendChild(s);
@@ -698,13 +698,13 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-51983538-3', 'auto');
+      ga('create', 'UA-32139554-6', 'auto');
       ga('send', 'pageview');
 
     </script>
 
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-    <script id="dsq-count-scr" src="//devopstopologies.disqus.com/count.js" async>
+    <script id="dsq-count-scr" src="//devopstopologies-ru.disqus.com/count.js" async>
     </script>
 
     </body>
