Добавил имена переводчиков

--- a/index.html
+++ b/index.html
@@ -602,7 +602,14 @@
             <p>Manuel Pais редактировал и помог улучшить как сам сайт, так и описания и определения паттернов.</p>
 
             <p><a href="https://skeltonthatcher.com/meet-the-team/#matthew">Matthew</a> и <a href="https://skeltonthatcher.com/meet-the-team/#manuel">Manuel</a> занимают должность People-Friendly Technologist в <a href="http://skeltonthatcher.com/">Skelton Thatcher Consulting</a>.</p>
-            <p>Перевод <a href="https://express42.com">Express42</a></p>
+            <p>Перевод <a href="https://express42.com">Express42</a>, а именно:</p>
+            <ul>
+              <li><a href="https://github.com/Nklya">Николай Анциферов</a></li>
+              <li><a href="https://github.com/chromko">Дмитрий Мищенко</a></li>
+              <li><a href="https://github.com/postgred">Андрей Александров</a></li>
+              <li><a href="https://github.com/maxim0r">Максим Орешников</a></li>
+              <li><a href="https://github.com/vitkhab">Виталий Хабаров</a></li>
+            </ul>
 
         </div>
     </div>
