--- a/index.html
+++ b/index.html
@@ -710,9 +710,29 @@
 
     </script>
 
+
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
     <script id="dsq-count-scr" src="//devopstopologies-ru.disqus.com/count.js" async>
     </script>
 
+    <!-- Facebook Pixel Code -->
+    <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version=‘2.0’;
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window,document,‘script’,
+    ’https://connect.facebook.net/en_US/fbevents.js');
+    fbq(‘init’, ‘148642745919871’); 
+    fbq(‘track’, ‘PageView’);
+    </script>
+    <noscript>
+    <img height=“1” width=“1" 
+    src=“https://www.facebook.com/tr?id=148642745919871&ev=PageView
+    &noscript=1”/>
+    </noscript>
+    <!-- End Facebook Pixel Code -->
     </body>
 </html>
